--- a/index.html
+++ b/index.html
@@ -26,8 +26,13 @@
 </style>
 </head>
 <body>
+  <form>
+    1. Select Model:<br>
+    <input type="radio" name="model" value="GPT2" checked="checked">GPT2 Transformer (New)<br>
+    <input type="radio" name="model" value="LSTM">LSTM (Old)
+  </form>
   <form action="">
-    Choose an utterance to start dialogue :-)<br>
+    2. Select an utterance to start dialogue:<br>
     <select name="type" onchange="select()">
       <!-- 20_10: 20maxlen, 10responses -->
       <option value="thriller_statement">Statement on Genre Thriller: Kids can scare you to death, and they look much worse than they are.</option>
@@ -65,8 +70,9 @@ var svg = d3.select("body").append("svg")
 
 function select(){
   var type = $('select option:selected').val()
+  var model = $("input[name='model']:checked").val();
   console.log(type)
-  d3.json(type+".json", function(error, tree_data) {
+  d3.json(model + '/'+ type+".json", function(error, tree_data) {
   root = tree_data;
   root.x0 = tree_height / 2;
   root.y0 = 0;
@@ -84,7 +90,7 @@ function select(){
 });
 }
 
-d3.json("thriller_statement.json", function(error, tree_data) {
+d3.json("GPT2/thriller_statement.json", function(error, tree_data) {
   root = tree_data;
   root.x0 = tree_height / 2;
   root.y0 = 0;
