--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 }
 
 .node text {
-  font: 11px sans-serif;
+  font: 12px sans-serif;
+  background-color: #ccc;
 }
 
 .link {
@@ -26,26 +27,36 @@
 </style>
 </head>
 <body>
-  <form>
-    1. Select Model:<br>
-    <input type="radio" name="model" value="GPT2" checked="checked">GPT2 Transformer (New)<br>
-    <input type="radio" name="model" value="LSTM">LSTM (Old)
-  </form>
-  <form action="">
-    2. Select an utterance to start dialogue:<br>
-    <select name="type" onchange="select()">
-      <!-- 20_10: 20maxlen, 10responses -->
-      <option value="thriller_statement">Statement on Genre Thriller: Kids can scare you to death, and they look much worse than they are.</option>
-      <option value="thriller_question">Question on Genre Thriller: Mr. Halloran, are you scared of this place?</option>
-      <option value="romance_statement">Statement on Genre Romance: I will give my hearty consent to his marrying whichever of the girls he chooses.</option>
-      <option value="romance_question">Question on Genre Romance: Has my nephew made you an offer of marriage?</option>
-    </select>
-  </form>
+  <div>
+    <form>
+      1. Select Model:<br>
+      <input type="radio" name="model" value="20201119" checked="checked">GPT2 Transformer (New)<br>
+      <!-- <input type="radio" name="model" value="LSTM">LSTM (Old) -->
+    </form>
+    <form action="">
+      2. Select an utterance to start dialogue:<br>
+      <select name="type" onchange="select()">
+        <!-- 20_10: 20maxlen, 10responses -->
+        <!-- <option value="thriller_statement">Statement on Genre Thriller: Kids can scare you to death, and they look much worse than they are.</option>
+        <option value="thriller_question">Question on Genre Thriller: Mr. Halloran, are you scared of this place?</option>
+        <option value="romance_statement">Statement on Genre Romance: I will give my hearty consent to his marrying whichever of the girls he chooses.</option>
+        <option value="romance_question">Question on Genre Romance: Has my nephew made you an offer of marriage?</option>
+        <option value="thriller_statement_no">Statement on Genre Thriller No-Feature</option>
+        <option value="thriller_question_no">Question on Genre Thriller No-Feature</option>
+        <option value="romance_statement_no">Statement on Genre Romance No-Feature</option>
+        <option value="romance_question_no">Question on Genre Romance No-Feature</option> -->
+        <option value="new_all_C-S">Concat - Split</option>
+        <option value="new_all_C-B">Concat - Beginning</option>
+      </select>
+    </form>
+    <button value="" onclick="switchSeed()">Switch input seed</button>
+  </div>
+  
 <script src="https://d3js.org/d3.v3.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
 <script>
 
-var margin = {top: 20, right: 20, bottom: 20, left: 300},
+var margin = {top: 20, right: 20, bottom: 20, left: 50},
     canvas_height = window.innerHeight,
     canvas_width = window.innerWidth
     tree_width = canvas_width - margin.right - margin.left,
@@ -68,12 +79,14 @@ var svg = d3.select("body").append("svg")
     .append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
+ID = 0;
+
 function select(){
   var type = $('select option:selected').val()
   var model = $("input[name='model']:checked").val();
   console.log(type)
   d3.json(model + '/'+ type+".json", function(error, tree_data) {
-  root = tree_data;
+  root = tree_data[ID];
   root.x0 = tree_height / 2;
   root.y0 = 0;
 
@@ -90,8 +103,31 @@ function select(){
 });
 }
 
-d3.json("GPT2/thriller_statement.json", function(error, tree_data) {
-  root = tree_data;
+function switchSeed(){
+  ID = (Math.floor(Math.random() * 100) - 1);
+  var type = $('select option:selected').val()
+  var model = $("input[name='model']:checked").val();
+  // console.log(type)
+  d3.json(model + '/'+ type+".json", function(error, tree_data) {
+  root = tree_data[ID];
+  root.x0 = tree_height / 2;
+  root.y0 = 0;
+
+  function collapse(d) {
+    if (d.children) {
+      d._children = d.children;
+      d._children.forEach(collapse);
+      d.children = null;
+    }
+  }
+
+  root.children.forEach(collapse);
+  update(root);
+});
+}
+
+d3.json("20201119/new_all_C-S.json", function(error, tree_data) {
+  root = tree_data[ID];
   root.x0 = tree_height / 2;
   root.y0 = 0;
 
@@ -135,9 +171,11 @@ function update(source) {
   new_nodes.append("text")
       .attr("x", function(d) { return d.children || d._children ? -10 : 10; })
       .attr("dy", ".35em")
-      .attr("text-anchor", function(d) { return d.children || d._children ? "end" : "start"; })
+      .attr("text-anchor", function(d) { return d.children || d._children ? "start" : "start"; })
       .text(function(d) { return d.name; })
       .style("fill-opacity", 1e-6);
+
+  wrap(d3.selectAll('text'),170);
 
   // Transition nodes to their new position.
   var moved_node = node.transition().duration(duration)
@@ -208,4 +246,32 @@ function click(d) {
   update(d);
 }
 
+function wrap(text, width) {
+  text.each(function() {
+    var text = d3.select(this),
+      words = text.text().split(/\s+/).reverse(),
+      word,
+      line = [],
+      lineNumber = 0,
+      lineHeight = 1.1, // ems
+      y = text.attr("y"),
+      dy = parseFloat(text.attr("dy")),
+      tspan = text.text(null).append("tspan").attr("x", 0).attr("y", y).attr("dy", dy + "em");
+    while (word = words.pop()) {
+      line.push(word + " ");
+      tspan.text(line.join(" "));
+      if (tspan.node().getComputedTextLength() > width) {
+        line.pop();
+        tspan.text(line.join(" "));
+        line = [word];
+        // tspan = text.append("tspan").attr("x", 0).attr("y", y).attr("dy", ++lineNumber * lineHeight + dy + "em").text(word);
+        tspan = text.append("tspan").attr("x", 0).attr("y", y).attr("dy", "1.1em").text(word+" ");
+      }
+    }
+    d3.select(this.parentNode.children[0]).attr('height', 19 * (lineNumber+1));
+    
+});}
+
 </script>
+</body>
+</html>
